src/main/java/com/example/DiplomaSite/error/TeacherNotFoundException.java
package com.example.DiplomaSite.error;

public class TeacherNotFoundException extends RuntimeException {
    public TeacherNotFoundException(String message) {
        super(message);
    }
}
